version/0.4/_sources/osl_server_api/_autosummary/ansys.optislang.core.osl_server.OslServer.rst.txt
OslServer
=========

.. currentmodule:: ansys.optislang.core.osl_server

.. autoclass:: OslServer

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~OslServer.__init__
      ~OslServer.dispose
      ~OslServer.evaluate_design
      ~OslServer.get_actor_info
      ~OslServer.get_actor_properties
      ~OslServer.get_actor_states
      ~OslServer.get_actor_status_info
      ~OslServer.get_actor_supports
      ~OslServer.get_basic_project_info
      ~OslServer.get_full_project_status_info
      ~OslServer.get_full_project_tree
      ~OslServer.get_full_project_tree_with_properties
      ~OslServer.get_host
      ~OslServer.get_hpc_licensing_forwarded_environment
      ~OslServer.get_input_slot_value
      ~OslServer.get_osl_version
      ~OslServer.get_osl_version_string
      ~OslServer.get_output_slot_value
      ~OslServer.get_port
      ~OslServer.get_project_description
      ~OslServer.get_project_location
      ~OslServer.get_project_name
      ~OslServer.get_project_status
      ~OslServer.get_project_tree_systems
      ~OslServer.get_project_tree_systems_with_properties
      ~OslServer.get_project_uid
      ~OslServer.get_server_info
      ~OslServer.get_server_is_alive
      ~OslServer.get_systems_status_info
      ~OslServer.get_timeout
      ~OslServer.get_working_dir
      ~OslServer.new
      ~OslServer.open
      ~OslServer.reset
      ~OslServer.run_python_file
      ~OslServer.run_python_script
      ~OslServer.save
      ~OslServer.save_as
      ~OslServer.save_copy
      ~OslServer.send_command
      ~OslServer.set_timeout
      ~OslServer.shutdown
      ~OslServer.start
      ~OslServer.stop
   
   

   
   
   